[package]
name = "sharekaro"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }

clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_file = { version = "0.22.1" }
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-webpki-roots",
] }
tungstenite = "0.27.0"
url = "2.5.4"
